syntax = "proto3";

package go.micro.srv.stats;

service Dna {
	rpc Stats(Request) returns (Response) {}
}

message Message {
	string id = 1;
	int64 timestamp = 2;
	bool isMutant = 3;
	repeated string dna=4;
}

message Request {
	string msg = 1;
}

message Response {
	int64 count_mutant_dna = 1;
	int64 count_human_dna = 2;
	float ratio = 3;
}
